<resources>
    <string name="app_name">QuizApp</string>
    <string name="e_g_bob">e.g. Bob</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="welcome">Welcome</string>
    <string name="start">START</string>
    <string name="quiz_image_showing_a_flag">Quiz image showing a flag.</string>
    <string name="submit">SUBMIT</string>
    <string name="trophy_image_description">Trophy image</string>
    <string name="result">Result</string>
    <string name="success">Success!</string>
    <string name="username">username</string>
    <string name="you_scored_9_10">You scored 9/10</string>
    <string name="done">DONE</string>
</resources>